small improvements to like bigger score font andd showing realtime money